--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,9 @@
 title: DevNaEstrada
 email: devnaestrada at gmail com
 email_address: devnaestrada@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
+description: "Podcast sobre front-end, back-end e desenvolvimento web. Venha conhecer o nosso ponto de vista no mundo da programação!"
 url: "http://devnaestrada.com.br" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
 
 # itunes
 itunes_url: "https://itunes.apple.com/br/podcast/devnaestrada/id997779431?mt=2"
@@ -22,6 +17,7 @@ soundcloud_site_capa: "http://i1.sndcdn.com/avatars-000147816775-ycyu5k-original
 # vendor codes
 google_analytics: UA-63291340-1
 disqus_shortname: devnaestrada
+facebook_meta: true
 
 # Build settings
 markdown: kramdown
