--- a/.editor-config
+++ b/.editor-config
@@ -9,18 +9,15 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 
-# 2 space indentation and tab
 [*.html]
-indent_style = tab
+indent_style = space
 indent_size = 2
 
-# 2 space indentation and tab
 [*.scss]
-indent_style = tab
+indent_style = space
 indent_size = 2
 
-# 2 space indentation and tab
 [*.js]
-indent_style = tab
+indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
