--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,13 @@
-# Site settings
+# general
 title: DevNaEstrada
 email: devnaestrada at gmail com
 email_address: devnaestrada@gmail.com
 baseurl: "/"
 description: "Podcast sobre front-end, back-end e desenvolvimento web. Venha conhecer o nosso ponto de vista no mundo da programação!"
 url: "http://devnaestrada.com.br"
+supporter_asset_url: "public/assets/img/supporter/"
 
-# Blog
+# blog
 paginate: 6
 paginate_path: "/podcast/:num/"
 
@@ -42,3 +43,136 @@ gems:
   - jekyll-paginate
   - bourbon
   - neat
+
+# supporters
+
+support_master:
+  name: "Contratado.me"
+  img: "contratado.jpg"
+  class: "contratado"
+  url: "http://devs.contratado.me/"
+
+support_collection:
+  -
+    title: "Apoiadores Júnior"
+    supporters:
+      -
+        name: "Gabriel Ribeiro"
+        img: "gabriel-ribeiro.jpg"
+      -
+        name: "Nuno Sccp"
+        img: "default.png"
+      -
+        name: "Thiago Simões"
+        img: "thiago-simoes.jpg"
+      -
+        name: "Douglas Quintanilha"
+        img: "douglas-quintanilha.jpg"
+      -
+        name: "Philippe Silva"
+        img: "philippe-silva.jpg"
+      -
+        name: "Josimar Camargo"
+        img: "josimar-camargo.jpg"
+  -
+    title: "Apoiadores Pleno"
+    supporters:
+      -
+        name: "Adriano Fernandes"
+        img: "adriano-fernandes.jpg"
+      -
+        name: "Claudson Oliveira"
+        img: "claudson-oliveira.jpg"
+      -
+        name: "Diego Girotto Arigony"
+        img: "diego-girotto.jpg"
+      -
+        name: "Dânio Filho"
+        img: "default.png"
+      -
+        name: "Luís Felipe Souza"
+        img: "luis-felipe.jpg"
+      -
+        name: "Ícaro Ramires"
+        img: "icaro-ramires.jpg"
+      -
+        name: "Andre Loureiro"
+        img: "andre-loureiro.jpg"
+      -
+        name: "Igor Souza"
+        img: "igor-souza.jpg"
+      -
+        name: "Débora Martins"
+        img: "debora-martins.jpg"
+      -
+        name: "Leonardo Lucas"
+        img: "leonardo-lucas.jpg"
+      -
+        name: "Bruno Eduardo"
+        img: "bruno-eduardo.jpg"
+      -
+        name: "Victor Miguez"
+        img: "default.png"
+      -
+        name: "Kadu Mx"
+        img: "kadu-mx.jpg"
+      -
+        name: "Leandro Silva"
+        img: "lrsilva.jpg"
+      -
+        name: "Rafael Crispim"
+        img: "rafael-crismpim.jpg"
+      -
+        name: "Johnn Erick"
+        img: "default.png"
+      -
+        name: "Leandro Nunes"
+        img: "default.png"
+  -
+    title: "Apoiadores Sênior"
+    supporters:
+      -
+        name: "Afonso França"
+        img: "afonso-franca.jpg"
+      -
+        name: "Matheus Brocchi"
+        img: "matheus.jpg"
+      -
+        name: "Igor Leroy"
+        img: "igor-leroy.jpg"
+      -
+        name: "Luiz Augusto"
+        img: "default.png"
+      -
+        name: "Rodrigo Aiala"
+        img: "rodrigo-aiala.jpg"
+      -
+        name: "Willian Martins"
+        img: "william-martins.jpg"
+      -
+        name: "Wilian Penaforte"
+        img: "william-penaforte.jpg"
+      -
+        name: "Antônio Roberto"
+        img: "antonio-roberto.jpg"
+      -
+        name: "Xhamps Rapha"
+        img: "xhamps.jpg"
+      -
+        name: "Eduardo Matos"
+        img: "eduardo-matos.jpg"
+      -
+        name: "Marcos Paulo Reis"
+        img: "marcos-paulo.jpg"
+      -
+        name: "Arthur Braga Alfredo"
+        img: "arthur-braga.jpg"
+      -
+        name: "Rafael Naves"
+        img: "rafael-naves.jpg"
+      -
+        name: "Geovane Rocha"
+        img: "default.png"
+      -
+        name: "Erick Bessa"
+        img: "erick-bessa.jpg"
