update tarantini photo

--- a/_config.yml
+++ b/_config.yml
@@ -133,7 +133,7 @@ support_collection:
         img: "default.png"
       -
         name: "Tarantini Pereira"
-        img: "tarantini.jpg"
+        img: "tarantini-pereira.jpg"
       -
         name: "Aurimar Aparecido da Silva"
         img: "aurimar-silva.jpg"
