update picture for supporter

--- a/_config.yml
+++ b/_config.yml
@@ -148,7 +148,7 @@ support_collection:
         img: "dyego-rodrigo.jpg"
       -
         name: "Gian Souza"
-        img: "default.png"
+        img: "gian.jpg"
       -
         name: "Bruno Pereira"
         img: "bruno-pereira.jpg"
