--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,78 @@ gems:
   - bourbon
   - neat
 
-# supporters
+# mini store
+products:
+  frontend:
+    -
+      name: "Frontend DNE"
+      image: "public/assets/img/mini-store/camiseta-front-typo-frente.jpg"
+      size: "P"
+      pag_code: EB012FCAA9A973BCC43EEFB6B2DE3E16
+    -
+      name: "Frontend DNE"
+      image: "public/assets/img/mini-store/camiseta-front-typo-frente.jpg"
+      size: "M"
+      pag_code: 4FC423F127277F87741C0FA8CF3A3BE4
+    -
+      name: "Frontend DNE"
+      image: "public/assets/img/mini-store/camiseta-front-typo-frente.jpg"
+      size: "G"
+      pag_code: FE12316FD7D76AF554F0EF8F46F47DB1
+    -
+      name: "Frontend DNE"
+      image: "public/assets/img/mini-store/camiseta-front-typo-frente.jpg"
+      size: "GG"
+      pag_code: 01A207131818DBD224EC3F89E758FFA3
+    -
+      name: "Frontend DNE"
+      image: "public/assets/img/mini-store/camiseta-front-typo-frente.jpg"
+      size: "XG"
+      pag_code: AE77E2E1A6A6344BB4952FB0678F551D
+  backend:
+    -
+      name: "Backend DNE"
+      image: "public/assets/img/mini-store/camiseta-back-typo-frente.jpg"
+      size: "P"
+      pag_code: 5B1B52211919DE7DD4B70FB295B56197
+    -
+      name: "Backend DNE"
+      image: "public/assets/img/mini-store/camiseta-back-typo-frente.jpg"
+      size: "M"
+      pag_code: B6A811C07E7EFD4664CFBFA57228A4AF
+    -
+      name: "Backend DNE"
+      image: "public/assets/img/mini-store/camiseta-back-typo-frente.jpg"
+      size: "G"
+      pag_code: F563D63320207619940C9FA63A323910
+    -
+      name: "Backend DNE"
+      image: "public/assets/img/mini-store/camiseta-back-typo-frente.jpg"
+      size: "GG"
+      pag_code: 4280B380A1A1CAE7746D7F855AD07648
+    -
+      name: "Frontend DNE"
+      image: "public/assets/img/mini-store/camiseta-back-typo-frente.jpg"
+      size: "XG"
+      pag_code: 8802E79F272739DDD4AA8FB8A3C3FCD7
+  classic:
+    -
+      name: "Classic DNE"
+      image: "public/assets/img/mini-store/camiseta-classic-frente.jpg"
+      size: "G"
+      pag_code: 02AD92A04F4FBB63341C0FAD8B56B326
+    -
+      name: "Classic DNE"
+      image: "public/assets/img/mini-store/camiseta-classic-frente.jpg"
+      size: "GG"
+      pag_code: 758459772A2A0B6554CA2F86F0FE3325
+    -
+      name: "Classic DNE"
+      image: "public/assets/img/mini-store/camiseta-classic-frente.jpg"
+      size: "XG"
+      pag_code: 020794E917179C5BB4711FB85DB28881
 
+# supporters
 support_master:
   name: "Contratado.me"
   img: "contratado.jpg"
