fix facebook og meta

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ itunes_itpc: "itpc://devnaestrada.com.br/feed.xml"
 
 # soundcloud
 soundcloud_prefix: "http://feeds.soundcloud.com/stream/"
-soundcloud_site_capa: "http://i1.sndcdn.com/avatars-000161212924-uhi3ws-original.png"
+soundcloud_site_capa: "https://i1.sndcdn.com/avatars-000193055487-kwlygf-t300x300.jpg"
 
 # vendor codes
 google_analytics: UA-63291340-1
