Change Wordcamp RJ description

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # general
-title: DevNaEstrada
+title: DEVNAESTRADA
 email: devnaestrada at gmail com
 email_address: contato@devnaestrada.com.br
 baseurl: "/"
