--- a/_data/community.yml
+++ b/_data/community.yml
@@ -10,3 +10,13 @@
   picture: '/public/assets/img/community/frontendbr.jpg'
   picture_alt: 'Front-end BR'
   description: 'Projeto OpenSource criado e mantido pela comunidade de Front-end no Brasil. Nesse grupo do Github você vai encontrar repositórios para eventos que acontecem no Brasil, fórum de discussão, projeto de doação de livro, vagas de trabalho e mais! Faça parte do maior grupo de Front-end do Brasil.'
+- 
+  title: 'PHPSP'
+  link: 'http://phpsp.org.br'
+  picture: '/public/assets/img/community/phpsp.jpg'
+  picture_alt: 'PHPSP'
+  description: 'O PHPSP é o conjunto de todas as pessoas que participam de alguma forma da comunidade: Você que comparece aos eventos, que faz código, que comenta nas redes sociais e que fala a respeito da comunidade.
+
+Para que a comunidade esteja sempre ativa, existe uma parcela destes membros que cuidam dos eventos, sites, projetos e redes sociais. Eles são mais conhecidos como os “Evangelistas do PHPSP”.
+
+Quer participar mais da comunidade e não sabe como? Entre em contato com um dos Evangelistas do PHPSP e ajude a comunidade a continuar crescendo!'
