--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: DEVNAESTRADA
 email: devnaestrada at gmail com
 email_address: contato@devnaestrada.com.br
 baseurl: "/"
-description: "Podcast sobre front-end, back-end e desenvolvimento web. Venha conhecer o nosso ponto de vista no mundo da programação!"
+description: "Podcast sobre front-end, back-end e desenvolvimento web. Toda sexta feira um novo episódio, com pautas, entrevistas e toda terça feira um DNE Pocket!"
 url: "http://devnaestrada.com.br"
 
 # future posts
