Add Brazilian React Rio community

--- a/_data/community.yml
+++ b/_data/community.yml
@@ -1,4 +1,10 @@
 -
+  title: 'React Rio'
+  link: 'http://bit.ly/dne-react-rio'
+  picture: 'https://avatars1.githubusercontent.com/u/30711437?v=3&s=200'
+  picture_alt: 'React-Rio'
+  description: 'Comunidade React Rio'
+-
   title: 'DojoCE'
   link: 'http://bit.ly/dne-comunidade-dojoce'
   picture: 'https://avatars2.githubusercontent.com/u/8334827?v=3&s=200'
