Add GORAILS community

--- a/_data/community.yml
+++ b/_data/community.yml
@@ -32,3 +32,11 @@
     Para que a comunidade esteja sempre ativa, existe uma parcela destes membros que cuidam dos eventos, sites, projetos e redes sociais. Eles são mais conhecidos como os “Evangelistas do PHPSP”.
     Quer participar mais da comunidade e não sabe como? Entre em contato com um dos Evangelistas do PHPSP e ajude a comunidade a continuar crescendo!
   '
+-
+  title: 'GORAILS'
+  link: 'http://www.gorails.com.br/'
+  picture: 'https://avatars1.githubusercontent.com/u/17317915?s=200&v=4%27'
+  picture_alt: 'GORAILS'
+  description: 'A GoRails nasceu de um grupo de desenvolvedores preocupados com as oportunidades de emprego para o mercado Goiano, hoje somos uma comunidade empenhada em fomentar o uso do framework Ruby on Rails em Goiás 
+  e no Brasil!.Mas não apoiamos só o rails, estamos aqui para apoiar o mercado tecnológico. Em nosso site você ira encontrar vagas de emprego, eventos, noticias, tutoriais, games, sim você ouviu games!...Fazemos uso de gamification para 
+  incentivar nossos usuários a produzirem conteúdo. Da um pulo no site e ajude-nos também, afinal somos Open Source.'
