update magnetis sponsor

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -14,7 +14,7 @@ magnetis:
   name: "Magnetis"
   url: "https://bit.ly/dne-alura"
   img: "/assets/img/partners/magnetis.png"
-  text: "Quer se aprimorar na sua carreira? Na Alura você encontra mais de 480 cursos! Na Alura sua carreira está pronta para decolar."
+  text: "Magnetis é uma fintech aonde criaram um robô que encontra os melhore investimentos para seus sonhos."
 
 bluesoft:
   name: "Bluesoft"
