update link for magnetis

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -12,7 +12,7 @@ alura:
 
 magnetis:
   name: "Magnetis"
-  url: "https://bit.ly/dne-alura"
+  url: "https://bit.ly/dne-magnetis"
   img: "/assets/img/partners/magnetis.png"
   text: "Magnetis é uma fintech aonde criaram um robô que encontra os melhore investimentos para seus sonhos."
 
