--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -39,3 +39,9 @@ vanhack:
   url: "http://www.vanhack.com/saopaulo/"
   img: "/assets/img/partners/vanhack.png"
   text: "Venha Participar da maior feira de recrutamento para o Canada e Europa."
+
+crowd:
+  name: "CROWD"
+  url: "https://goo.gl/fmdikK"
+  img: "/assets/img/partners/crowd.png"
+  text: "A maior plataforma para trabalho freelancer do Brasil. Cadastre-se gratuitamente e receba propostas de grandes agências, empresas e startups e participe também de diversos projetos sob demanda."
