--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -44,4 +44,4 @@ crowd:
   name: "CROWD"
   url: "https://goo.gl/fmdikK"
   img: "/assets/img/partners/crowd.png"
-  text: "A maior plataforma para trabalho freelancer do Brasil. Cadastre-se gratuitamente e receba propostas de grandes agências, empresas e startups e participe também de diversos projetos sob demanda."
+  text: "A maior plataforma para trabalho freelancer do Brasil. Cadastre-se gratuitamente e receba propostas de grandes agências, empresas e startups e participe de diversos projetos sob demanda."
