update alura link

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -6,7 +6,7 @@ revelo:
 
 alura:
   name: "Alura"
-  url: "https://bit.ly/dne-alura"
+  url: "https://www.alura.com.br/formacoes"
   img: "/assets/img/partners/alura.png"
   text: "Quer se aprimorar na sua carreira? Na Alura você encontra mais de 480 cursos! Na Alura sua carreira está pronta para decolar."
 
