udpate Alura description

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -8,7 +8,7 @@ alura:
   name: "Alura"
   url: "https://www.alura.com.br/formacoes"
   img: "/assets/img/partners/alura.png"
-  text: "Quer se aprimorar na sua carreira? Na Alura você encontra mais de 480 cursos! Na Alura sua carreira está pronta para decolar."
+  text: "Alura - Aprenda, crie e cresça na Alura. Mais de 600 cursos online de tecnologia, design e marketing para você reinventar sua carreira."
 
 magnetis:
   name: "Magnetis"
