Minor fixes to the site

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: DEVNAESTRADA
 email: devnaestrada at gmail com
 email_address: contato@devnaestrada.com.br
 baseurl: "/"
-description: "Podcast sobre front-end, back-end e desenvolvimento web. Toda sexta feira um novo episódio, com pautas, entrevistas e toda terça feira um DNE Pocket!"
+description: "Podcast sobre front-end, back-end e desenvolvimento web. Toda sexta feira um novo episódio com pautas e entrevistas!"
 url: "https://devnaestrada.com.br"
 
 # blog
