Fixing issues about footer image and description of site

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # general
 title: DEVNAESTRADA
-email: devnaestrada at gmail com
+email: contato@devnaestrada.com.br
 email_address: contato@devnaestrada.com.br
 baseurl: "/"
-description: "Podcast sobre front-end, back-end e desenvolvimento web. Toda sexta feira um novo episódio com pautas e entrevistas!"
+description: "O podcast mais tradicional sobre desenvolvimento! Toda sexta-feira um novo episódio sobre tecnologias, entrevistas com profissionais na área, tudo com muito humor e alegria"
 url: "https://devnaestrada.com.br"
 
 # blog
