--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -45,3 +45,8 @@ crowd:
   url: "https://goo.gl/fmdikK"
   img: "/assets/img/partners/crowd.png"
   text: "A maior plataforma para trabalho freelancer do Brasil. Cadastre-se gratuitamente e receba propostas de grandes agências, empresas e startups e participe de diversos projetos sob demanda."
+
+locawebpro:
+  name: "Locaweb Pro"
+  url: "https://devnaestrada.com.br/locawebpro"
+  text: "Conheça a Locaweb Pro! Um programa de parcerias da Locaweb para developers, com benefícios exclusivos para alavancar sua carreira e gerar mais negócios!"
