Fixing dne+ad link

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -48,5 +48,5 @@ crowd:
 
 locawebpro:
   name: "Locaweb Pro"
-  url: "https://devnaestrada.com.br/locawebpro"
+  url: "https://www.devnaestrada.com.br/locawebpro"
   text: "Conheça a Locaweb Pro! Um programa de parcerias da Locaweb para developers, com benefícios exclusivos para alavancar sua carreira e gerar mais negócios!"
