Fixing partner img

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -49,4 +49,5 @@ crowd:
 locawebpro:
   name: "Locaweb Pro"
   url: "https://www.devnaestrada.com.br/locawebpro"
+  img: "/assets/img/partners/locawebpro.png"
   text: "Conheça a Locaweb Pro! Um programa de parcerias da Locaweb para developers, com benefícios exclusivos para alavancar sua carreira e gerar mais negócios!"
