Fixing GFS link

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -60,6 +60,6 @@ promobit:
 
 google_for_startups:
   name: "Google for Startups"
-  url: "https://startup.google.com.br"
+  url: "https://rebrand.ly/qbqzymr"
   img: "/assets/img/partners/google-for-startups.png"
   text: "Conheça o Google for Startups"
