--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -48,7 +48,7 @@ crowd:
 
 locawebpro:
   name: "Locaweb Pro"
-  url: "https://www.devnaestrada.com.br/locawebpro"
+  url: "https://pro.locaweb.com.br?utm_source=DevNaEstrada&utm_medium=Podcast&utm_campaign=Big_Tech_Para_Todo_Mundo_PRO"
   img: "/assets/img/partners/locawebpro.jpg"
   text: "Conheça a Locaweb Pro! Um programa de parcerias da Locaweb para developers, com benefícios exclusivos para alavancar sua carreira e gerar mais negócios!"
 
