--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -67,5 +67,5 @@ google_for_startups:
 locawebvps:
   name: "Locaweb VPS"
   url: "https://j.mp/2ZwreqF"
-  img: "/assets/img/partners/locaweb.jpg"
+  img: "/assets/img/partners/locaweb.png"
   text: "Locaweb VPS: Autonomia do servidor virtualizado Linux ou Windows com o melhor custo-benefício e performance SSD"
