--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -66,6 +66,6 @@ google_for_startups:
 
 locawebvps:
   name: "Locaweb VPS"
-  url: "https://j.mp/2ZwreqF"
+  url: "https://j.mp/3mh5Qgq"
   img: "/assets/img/partners/locaweb.png"
   text: "Locaweb VPS: Autonomia do servidor virtualizado Linux ou Windows com o melhor custo-benefício e performance SSD"
