Fixing sponsor link

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -66,6 +66,6 @@ google_for_startups:
 
 locawebvps:
   name: "Locaweb VPS"
-  url: "https://j.mp/3mh5Qgq"
+  url: "https://www.locaweb.com.br/?utm_source=Dev_na_Estrada&utm_medium=Spotify&utm_campaign=Locaweb_varejo&utm_content=https://www.devnaestrada.com.br"
   img: "/assets/img/partners/locaweb.png"
   text: "Locaweb VPS: Autonomia do servidor virtualizado Linux ou Windows com o melhor custo-benefício e performance SSD"
